# amaris_software_school

./: .gitignore  CMakeLists.txt  run_cmake.py  try_cmake  try_cmake.bash
amaris/: CMakeLists.txt
amaris/include/: CMakeLists.txt  amaris.h  console.h  console_linux.h  console_win.h  logger.h  parser.h
amaris/src/: CMakeLists.txt  amaris.cpp  console.cpp  logger.cpp
gtest/: CMakeLists.txt  test_logger.cpp  test_loggerFile.cpp
gtest/test_amaris/: CMakeLists.txt  test_console.cpp  test_logger.cpp
gtest/test_school/: CMakeLists.txt  test_prime.cpp
school/: CMakeLists.txt
school/include/: CMakeLists.txt  amaris.h  main_application.h  prime.h
school/src/: CMakeLists.txt  amaris.cpp  main.cpp  main_application.cpp  prime.cpp
